<resources>
    <string name="app_name">Recipes</string>
    <string name="app_name_full">Recipes</string>
    <string name="sample_title">Sample Title</string>
    <string name="sample_description">Sample Description</string>
    <string name="item_1">Item 1</string>
    <string name="title">TITLE</string>
    <string name="enter_title_here">Enter title here</string>
    <string name="recipe_text">RECIPE TEXT</string>
    <string name="enter_recipe_description_here">Enter recipe description here</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="todo">TODO</string>
    <string name="recipes">RECIPES</string>
</resources>
