<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">


            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/sample_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewTitle"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/sample_description"
                android:minLines = "1"
                android:maxLines = "10"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <ImageButton
                android:id="@+id/menuImageButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignEnd="@+id/textViewTitle"
                android:layout_alignParentTop="true"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:contentDescription="@string/todo"
                android:focusable="true"
                android:padding="4dp"
                android:src="@drawable/ic_more_vert_black_24dp"></ImageButton>


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>